syntax = "proto3";

package rng;

option go_package = "github.com/BullionBear/sequex/internal/model/protobuf/example";

message RngMessage {
    int64 random = 1;
}

message RngCountRequest {
    int64 id = 1;

}

message RngCountResponse {
    int64 id = 1;
    int64 n_count = 2;
}