syntax = "proto3";

package rng;

option go_package = "github.com/BullionBear/sequex/internal/model/protobuf/example;example";

message SumRequest {
    int64 id = 1;
    int64 offset = 2;
}

message SumResponse {
    int64 id = 1;
    int64 n_sum = 2;
    int64 n_count = 3;
}
